<?xml version="1.0"?>
<package format="2">
  <name>ouster_client</name>
  <version>0.1.1</version>
  <description>The os1_client package</description>
  <maintainer email="scosar@lincoln.ac.uk">Serhan Cosar</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libjsoncpp-dev</build_depend>
  <build_depend>libjsoncpp</build_depend>

  <exec_depend>libjsoncpp-dev</exec_depend>
  <exec_depend>libjsoncpp</exec_depend>
  <export></export>
</package>
